# MiCoSi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Experiments/MerotelicKTs/: Matrix3x3.cs  Program.cs  Vec3.cs
Resources/Docs/: Help_Diagrams.odg
Resources/Samples/Default/: Mitosis.conf
Resources/Samples/InitialSetup/: Initial.xml  Mitosis.conf
Resources/Samples/MovingPoles/: Mitosis.conf  Poles.xml
Resources/UI/: Umber.xml
Sources/: CMakeLists.inc
Sources/Apps/: CMakeLists.inc
Sources/Apps/ConsoleApp/: Main.cpp  Simulation.cpp  Simulation.h  WorkingDirUtility.cpp  WorkingDirUtility.h  XmlCellInitializer.cpp  XmlCellInitializer.h  XmlPoleUpdater.cpp  XmlPoleUpdater.h
Sources/Apps/ConsoleApp.Args/: MitosisArgs.cpp  MitosisArgs.h  UniArgs.cpp  UniArgs.h
Sources/Apps/ConsoleApp.CliArgs/: CliArgs.cpp  CliArgs.h
Sources/Apps/MiCoSi.App/: Main.cpp  Simulation.cpp  Simulation.h  WorkingDirUtility.cpp  WorkingDirUtility.h  XmlCellInitializer.cpp  XmlCellInitializer.h  XmlPoleUpdater.cpp  XmlPoleUpdater.h
Sources/Apps/MiCoSi.Args/: MitosisArgs.cpp  MitosisArgs.h  UniArgs.cpp  UniArgs.h
Sources/Apps/MiCoSi.CliArgs/: CliArgs.cpp  CliArgs.h
Sources/Apps/MiCoSi.Visualizer.App/: CMakeLists.txt  Directories.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  UserErrors.cs
Sources/Apps/Visualizer/: CMakeLists.txt  Directories.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  UserErrors.cs
Sources/Apps/Visualizer/Capture/: BuildGraph.cs  CaptureOptions.cs  FileNamingTemplate.cs  FrameBuffer.cs  ImageSaver.cs  VideoSaver.cs
Sources/Apps/Visualizer/DxRender/: AbstractDxRenderer.cs  Delegates.cs  DxDeviceContext.cs  DxRenderContext.cs  GeometricDxRenderer.cs  IDxRenderer.cs
Sources/Apps/Visualizer/DxRender/Aspects/: DefaultStyleAspect.cs  IRenderTargetAspect.cs  IStyleAspect.cs  ObjectSelectingStyleAspect.cs  ScreenRenderTargetAspect.cs  TextureRenderTargetAspect.cs
Sources/Apps/Visualizer/DxRender/Styles/: IStyles.cs  StyleCollection.cs  StyleManager.cs  Styles.cs
Sources/Apps/Visualizer/GUI/: AboutForm.Designer.cs  AboutForm.cs  CaptureSettingsForm.Designer.cs  CaptureSettingsForm.cs  SelectionPopupForm.Designer.cs  SelectionPopupForm.cs  VisualSettingsForm.Designer.cs  VisualSettingsForm.cs
Sources/Apps/Visualizer/MainForm/: CaptureAction.cs  GuiEventProcessingAction.cs  IOnTickAction.cs  MainFormContext.cs  RenderAction.cs  SelectAction.cs  SelectionPopupFormAction.cs  SimResultsLoadingAction.cs  States.cs
Sources/Apps/Visualizer/Meshes/: IndexedPolygon.cs  Mesh.cs  MeshGenerator.cs  Vertex.cs
Sources/Apps/Visualizer/Render/: Camera.cs  ConstantBuffer.cs  DxMeshes.cs  MouseState.cs
Sources/Apps/Visualizer/Settings/: CaptureSettings.cs  GuiSettings.cs  RenderSettings.cs  SettingsManager.cs  SettingsManagerBase.cs  SettingsObject.cs
Sources/Experiments/: CMakeLists.inc
Sources/Experiments/Experiments.Obsolete.App/: CMakeLists.txt  Program.cs
Sources/Experiments/Experiments.Simple.App/: AnalyzedCell.cs  CMakeLists.txt  DataTable.cs  Experiment.Options.cs  Experiment.Perform.cs  Experiment.cs  IAnalyzer.cs  Program.cs  Specification.cs  TableFormat.cs
Sources/Experiments/Experiments.Simple.App/Analyzers/: BasicAnalyzer.cs  CentromereAnalyzer.cs  KmtAnalyzer.Default.cs  KmtAnalyzer.Dudka2018.cs  KmtAnalyzer.McEwen2001.cs  KmtAnalyzer.Meraldi2004.cs  KmtAnalyzer.Rieder1994.cs  KmtAnalyzer.cs  MovementAnalyzer.Magidson.2011.cs  MovementAnalyzer.cs
Sources/Experiments/Experiments.Simple.App/MyMath/: Median.cs
Sources/Experiments/MerotelicKTs/: CMakeLists.txt  Program.cs
Sources/Libs/: CMakeLists.inc
Sources/Libs/MiCoSi.Launcher/: CMakeLists.txt  InitialStates.cs  Launcher.cs  PoleCoordinates.cs
Sources/Libs/Mitosis.Launcher/: CMakeLists.txt  InitialStates.cs  Launcher.cs  PoleCoordinates.cs
Sources/Solver/: CMakeLists.inc
Sources/Solver/MiCoSi.Core/: All.h  Converter.cpp  Converter.h  Defs.h  HardwareScanner.cpp  HardwareScanner.h  Interfaces.h  Random.cpp  Random.h  SimParams.cpp  SimParams.h  Timer.cpp  Timer.h  Versions.cpp  Versions.h
Sources/Solver/MiCoSi.Formatters/: All.h  DeSerializer.cpp  DeSerializer.h  DeSerializingCellInitializer.cpp  DeSerializingCellInitializer.h  DeSerializingPoleUpdater.h  MemoryStream.cpp  MemoryStream.h  Serializer.cpp  Serializer.h  SimParamsFormatter.cpp  SimParamsFormatter.h
Sources/Solver/MiCoSi.Geometry/: All.h  Geometry.cpp  Geometry.h  mat3x3.h  mat3x3x.cpp  mat3x3x.h  mat4x4.h  mat4x4x.cpp  mat4x4x.h  vec3.h  vec3x.cpp  vec3x.h  vec4.h  vec4x.cpp  vec4x.h
Sources/Solver/MiCoSi.Objects/: All.h  Cell.cpp  Cell.h  CellData.cpp  CellData.h  CellOps.cpp  CellOps.h  Chromosome.cpp  Chromosome.h  ChromosomePair.cpp  ChromosomePair.h  Interfaces.h  MT.cpp  MT.h  Pole.cpp  Pole.h  Spring.cpp  Spring.h
Sources/Solver/MiCoSi.Solvers/: All.h  CellStats.cpp  CellStats.h  CellWithRng.h  RandomCellInitializer.cpp  RandomCellInitializer.h  Simulator.cpp  Simulator.h  SimulatorConfig.cpp  SimulatorConfig.h  SimulatorFactory.cpp  SimulatorFactory.h  StaticPoleUpdater.cpp  StaticPoleUpdater.h
Sources/Solver/MiCoSi.Streams/: All.h  Chunk.h  ChunkHeader.h  FileContainer.cpp  FileContainer.h  FileExplorer.cpp  FileExplorer.h  TimeStream.cpp  TimeStream.h
Sources/Solver/Mitosis.Core/: All.h  Converter.cpp  Converter.h  Defs.h  HardwareScanner.cpp  HardwareScanner.h  Interfaces.h  Random.cpp  Random.h  SimParams.cpp  SimParams.h  Timer.cpp  Timer.h  Versions.cpp  Versions.h
Sources/Solver/Mitosis.Formatters/: All.h  DeSerializer.cpp  DeSerializer.h  DeSerializingCellInitializer.cpp  DeSerializingCellInitializer.h  DeSerializingPoleUpdater.h  MemoryStream.cpp  MemoryStream.h  Serializer.cpp  Serializer.h  SimParamsFormatter.cpp  SimParamsFormatter.h
Sources/Solver/Mitosis.Geometry/: All.h  Geometry.cpp  Geometry.h  mat3x3.h  mat3x3x.cpp  mat3x3x.h  mat4x4.h  mat4x4x.cpp  mat4x4x.h  vec3.h  vec3x.cpp  vec3x.h  vec4x.cpp  vec4x.h
Tests/: CMakeLists.inc
Tests/Functional/: Defs.h  Helpers.h  Main.cpp
Tests/Unit/: Defs.h  DistanceTests.h  Main.cpp  RandomTests.h  SimulatorTests.h
(+201 files in other folders)
