discover_cs(${CMAKE_CURRENT_LIST_DIR} VISUALIZER_CS)
add_executable(Visualizer WIN32 ${VISUALIZER_CS})
configure_cs(Visualizer "visualizer" Mitosis.API)
add_dependencies(Visualizer Mitosis.API)
file(COPY ${CMAKE_CURRENT_LIST_DIR}/Render/Shaders.fx DESTINATION ${CMAKE_SOURCE_DIR}/SDK/UI)
file(COPY ${CMAKE_CURRENT_LIST_DIR}/Capture/Encoder.prx DESTINATION ${CMAKE_SOURCE_DIR}/SDK/UI)
